@@ -28,7 +28,7 @@ public class CompanyController {
     public ResponseEntity<ResponseDataDto<CompanyResponse>> createCompany(@RequestBody CreateCompanyRequest createCompanyRequest) {
         Company company = companyService.createCompany(createCompanyRequest);
         CompanyResponse companyResponse = CompanyResponse.from(company);
-        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.COMPANY_CREATE_SUCCESS, companyResponse));
+        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.CREATE_SUCCESS, companyResponse));
     }
 
     // 업체 목록 조회
@@ -36,9 +36,8 @@ public class CompanyController {
     public ResponseEntity<ResponseDataDto<List<CompanyResponse>>> getCompanies() {
         List<CompanyResponse> companies = companyService.getCompanies().stream()
                 .map(CompanyResponse::from)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.COMPANY_LIST_SUCCESS, companies));
+                .toList();
+        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.LIST_SUCCESS, companies));
     }
 
     // 업체 상세 조회
@@ -46,7 +45,7 @@ public class CompanyController {
     public ResponseEntity<ResponseDataDto<CompanyResponse>> getCompanyById(@PathVariable UUID id) {
         Company company = companyService.getCompanyById(id);
         CompanyResponse companyResponse = CompanyResponse.from(company);
-        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.COMPANY_DETAIL_SUCCESS, companyResponse));
+        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.DETAIL_SUCCESS, companyResponse));
     }
 
     // 업체 수정
@@ -56,14 +55,14 @@ public class CompanyController {
             @RequestBody UpdateCompanyRequest request) {
         Company company = companyService.updateCompany(id, request);
         CompanyResponse companyResponse = CompanyResponse.from(company);
-        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.COMPANY_UPDATE_SUCCESS, companyResponse));
+        return ResponseEntity.ok(new ResponseDataDto<>(ResponseStatus.UPDATE_SUCCESS, companyResponse));
     }
 
     // 업체 삭제
     @DeleteMapping("/{id}")
     public ResponseEntity<ResponseMessageDto> deleteCompany(@PathVariable UUID id) {
         companyService.deleteCompany(id);
-        return ResponseEntity.ok(new ResponseMessageDto(ResponseStatus.COMPANY_DELETE_SUCCESS));
+        return ResponseEntity.ok(new ResponseMessageDto(ResponseStatus.DELETE_SUCCESS));
     }
 
 }
